pywebidl2/generated/WebIDLParser.py
# Generated from WebIDLParser.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class WebIDLParser ( Parser ):

    grammarFileName = "WebIDLParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "'?'", "'('", "')'", "'['", "']'", 
                     "'{'", "'}'", "'<'", "'>'", "','", "';'", "':'", "'-'", 
                     "'...'", "'.'", "'any'", "'async'", "'attribute'", 
                     "'boolean'", "'byte'", "'ByteString'", "'callback'", 
                     "'const'", "'constructor'", "'deleter'", "'dictionary'", 
                     "'DOMString'", "'double'", "'enum'", "'false'", "'float'", 
                     "'FrozenArray'", "'getter'", "'Infinity'", "'includes'", 
                     "'inherit'", "'interface'", "'iterable'", "'long'", 
                     "'maplike'", "'-Infinity'", "'mixin'", "'namespace'", 
                     "'NaN'", "'null'", "'object'", "'ObservableArray'", 
                     "'octet'", "'optional'", "'or'", "'partial'", "'Promise'", 
                     "'readonly'", "'record'", "'required'", "'sequence'", 
                     "'setlike'", "'setter'", "'short'", "'static'", "'stringifier'", 
                     "'symbol'", "'true'", "'typedef'", "'unrestricted'", 
                     "'unsigned'", "'USVString'", "'void'", "'ArrayBuffer'", 
                     "'DataView'", "'Int8Array'", "'Int16Array'", "'Int32Array'", 
                     "'Uint8Array'", "'Uint16Array'", "'Uint32Array'", "'Uint8ClampedArray'", 
                     "'Float32Array'", "'Float64Array'" ]

    symbolicNames = [ "<INVALID>", "EQUAL_SYMBOL", "QUESTION_SYMBOL", "LEFT_PAREN", 
                      "RIGHT_PAREN", "LEFT_BRACKET", "RIGHT_BRACKET", "LEFT_BRACE", 
                      "RIGHT_BRACE", "LEFT_ANGLE", "RIGHT_ANGLE", "COMMA", 
                      "SEMI", "COLON", "MINUS", "ELLIPSIS", "DOT", "ANY", 
                      "ASYNC", "ATTRIBUTE", "BOOLEAN", "BYTE", "BYTE_STRING", 
                      "CALLBACK", "CONST", "CONSTRUCTOR", "DELETER", "DICTIONARY", 
                      "DOM_STRING", "DOUBLE", "ENUM", "FALSE", "FLOAT", 
                      "FROZEN_ARRAY", "GETTER", "INFINITY", "INCLUDES", 
                      "INHERIT", "INTERFACE", "ITERABLE", "LONG", "MAPLIKE", 
                      "MINUS_INFINITY", "MIXIN", "NAMESPACE", "NAN", "NULL", 
                      "OBJECT", "OBSERVABLE_ARRAY", "OCTET", "OPTIONAL", 
                      "OR", "PARTIAL", "PROMISE", "READONLY", "RECORD", 
                      "REQUIRED", "SEQUENCE", "SETLIKE", "SETTER", "SHORT", 
                      "STATIC", "STRINGIFIER", "SYMBOL", "TRUE", "TYPEDEF", 
                      "UNRESTRICTED", "UNSIGNED", "USV_STRING", "VOID", 
                      "ARRAY_BUFFER", "DATA_VIEW", "INT_8_ARRAY", "INT_16_ARRAY", 
                      "INT_32_ARRAY", "UINT_8_ARRAY", "UINT_16_ARRAY", "UINT_32_ARRAY", 
                      "UINT_8_CLAMPED_ARRAY", "FLOAT_32_ARRAY", "FLOAT_64_ARRAY", 
                      "INTEGER_WEBIDL", "DECIMAL_WEBIDL", "IDENTIFIER_WEBIDL", 
                      "STRING_WEBIDL", "WHITESPACE_WEBIDL", "COMMENT_WEBIDL", 
                      "OTHER_WEBIDL" ]

    RULE_webIDL = 0
    RULE_definitions = 1
    RULE_definition = 2
    RULE_callbackOrInterfaceOrMixin = 3
    RULE_interfaceOrMixin = 4
    RULE_interfaceRest = 5
    RULE_partial = 6
    RULE_partialInterfaceOrPartialMixin = 7
    RULE_partialInterfaceRest = 8
    RULE_interfaceMembers = 9
    RULE_interfaceMember = 10
    RULE_partialInterfaceMembers = 11
    RULE_partialInterfaceMember = 12
    RULE_inheritance = 13
    RULE_mixinRest = 14
    RULE_mixinMembers = 15
    RULE_mixinMember = 16
    RULE_includesStatement = 17
    RULE_callbackRestOrInterface = 18
    RULE_callbackInterfaceMembers = 19
    RULE_callbackInterfaceMember = 20
    RULE_const_ = 21
    RULE_constValue = 22
    RULE_booleanLiteral = 23
    RULE_floatLiteral = 24
    RULE_constType = 25
    RULE_readWriteAttribute = 26
    RULE_inheritAttribute = 27
    RULE_attributeRest = 28
    RULE_attributeName = 29
    RULE_defaultValue = 30
    RULE_operation = 31
    RULE_regularOperation = 32
    RULE_specialOperation = 33
    RULE_operationRest = 34
    RULE_operationName = 35
    RULE_operationNameKeyword = 36
    RULE_argumentList = 37
    RULE_argument = 38
    RULE_argumentRest = 39
    RULE_argumentName = 40
    RULE_returnType = 41
    RULE_constructor = 42
    RULE_stringifier = 43
    RULE_stringifierRest = 44
    RULE_staticMember = 45
    RULE_staticMemberRest = 46
    RULE_iterable = 47
    RULE_asyncIterable = 48
    RULE_optionalArgumentList = 49
    RULE_readWriteMaplike = 50
    RULE_maplikeRest = 51
    RULE_readWriteSetlike = 52
    RULE_setlikeRest = 53
    RULE_namespace = 54
    RULE_namespaceMembers = 55
    RULE_namespaceMember = 56
    RULE_dictionary = 57
    RULE_dictionaryMembers = 58
    RULE_dictionaryMember = 59
    RULE_default_ = 60
    RULE_enum_ = 61
    RULE_callbackRest = 62
    RULE_typedef = 63
    RULE_type_ = 64
    RULE_typeWithExtendedAttributes = 65
    RULE_singleType = 66
    RULE_unionType = 67
    RULE_unionMemberType = 68
    RULE_distinguishableType = 69
    RULE_primitiveType = 70
    RULE_unrestrictedFloatType = 71
    RULE_floatType = 72
    RULE_unsignedIntegerType = 73
    RULE_integerType = 74
    RULE_optionalLong = 75
    RULE_stringType = 76
    RULE_promiseType = 77
    RULE_recordType = 78
    RULE_null_ = 79
    RULE_bufferRelatedType = 80
    RULE_extendedAttributeList = 81
    RULE_extendedAttribute = 82
    RULE_extendedAttributeInner = 83
    RULE_other = 84
    RULE_otherOrComma = 85
    RULE_argumentNameKeyword = 86

    ruleNames =  [ "webIDL", "definitions", "definition", "callbackOrInterfaceOrMixin", 
                   "interfaceOrMixin", "interfaceRest", "partial", "partialInterfaceOrPartialMixin", 
                   "partialInterfaceRest", "interfaceMembers", "interfaceMember", 
                   "partialInterfaceMembers", "partialInterfaceMember", 
                   "inheritance", "mixinRest", "mixinMembers", "mixinMember", 
                   "includesStatement", "callbackRestOrInterface", "callbackInterfaceMembers", 
                   "callbackInterfaceMember", "const_", "constValue", "booleanLiteral", 
                   "floatLiteral", "constType", "readWriteAttribute", "inheritAttribute", 
                   "attributeRest", "attributeName", "defaultValue", "operation", 
                   "regularOperation", "specialOperation", "operationRest", 
                   "operationName", "operationNameKeyword", "argumentList", 
                   "argument", "argumentRest", "argumentName", "returnType", 
                   "constructor", "stringifier", "stringifierRest", "staticMember", 
                   "staticMemberRest", "iterable", "asyncIterable", "optionalArgumentList", 
                   "readWriteMaplike", "maplikeRest", "readWriteSetlike", 
                   "setlikeRest", "namespace", "namespaceMembers", "namespaceMember", 
                   "dictionary", "dictionaryMembers", "dictionaryMember", 
                   "default_", "enum_", "callbackRest", "typedef", "type_", 
                   "typeWithExtendedAttributes", "singleType", "unionType", 
                   "unionMemberType", "distinguishableType", "primitiveType", 
                   "unrestrictedFloatType", "floatType", "unsignedIntegerType", 
                   "integerType", "optionalLong", "stringType", "promiseType", 
                   "recordType", "null_", "bufferRelatedType", "extendedAttributeList", 
                   "extendedAttribute", "extendedAttributeInner", "other", 
                   "otherOrComma", "argumentNameKeyword" ]

    EOF = Token.EOF
    EQUAL_SYMBOL=1
    QUESTION_SYMBOL=2
    LEFT_PAREN=3
    RIGHT_PAREN=4
    LEFT_BRACKET=5
    RIGHT_BRACKET=6
    LEFT_BRACE=7
    RIGHT_BRACE=8
    LEFT_ANGLE=9
    RIGHT_ANGLE=10
    COMMA=11
    SEMI=12
    COLON=13
    MINUS=14
    ELLIPSIS=15
    DOT=16
    ANY=17
    ASYNC=18
    ATTRIBUTE=19
    BOOLEAN=20
    BYTE=21
    BYTE_STRING=22
    CALLBACK=23
    CONST=24
    CONSTRUCTOR=25
    DELETER=26
    DICTIONARY=27
    DOM_STRING=28
    DOUBLE=29
    ENUM=30
    FALSE=31
    FLOAT=32
    FROZEN_ARRAY=33
    GETTER=34
    INFINITY=35
    INCLUDES=36
    INHERIT=37
    INTERFACE=38
    ITERABLE=39
    LONG=40
    MAPLIKE=41
    MINUS_INFINITY=42
    MIXIN=43
    NAMESPACE=44
    NAN=45
    NULL=46
    OBJECT=47
    OBSERVABLE_ARRAY=48
    OCTET=49
    OPTIONAL=50
    OR=51
    PARTIAL=52
    PROMISE=53
    READONLY=54
    RECORD=55
    REQUIRED=56
    SEQUENCE=57
    SETLIKE=58
    SETTER=59
    SHORT=60
    STATIC=61
    STRINGIFIER=62
    SYMBOL=63
    TRUE=64
    TYPEDEF=65
    UNRESTRICTED=66
    UNSIGNED=67
    USV_STRING=68
    VOID=69
    ARRAY_BUFFER=70
    DATA_VIEW=71
    INT_8_ARRAY=72
    INT_16_ARRAY=73
    INT_32_ARRAY=74
    UINT_8_ARRAY=75
    UINT_16_ARRAY=76
    UINT_32_ARRAY=77
    UINT_8_CLAMPED_ARRAY=78
    FLOAT_32_ARRAY=79
    FLOAT_64_ARRAY=80
    INTEGER_WEBIDL=81
    DECIMAL_WEBIDL=82
    IDENTIFIER_WEBIDL=83
    STRING_WEBIDL=84
    WHITESPACE_WEBIDL=85
    COMMENT_WEBIDL=86
    OTHER_WEBIDL=87

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class WebIDLContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(WebIDLParser.EOF, 0)

        def definitions(self):
            return self.getTypedRuleContext(WebIDLParser.DefinitionsContext,0)


        def getRuleIndex(self):
            return WebIDLParser.RULE_webIDL

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWebIDL" ):
                return visitor.visitWebIDL(self)
            else:
                return visitor.visitChildren(self)




    def webIDL(self):

        localctx = WebIDLParser.WebIDLContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_webIDL)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 175
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << WebIDLParser.LEFT_BRACKET) | (1 << WebIDLParser.CALLBACK) | (1 << WebIDLParser.DICTIONARY) | (1 << WebIDLParser.ENUM) | (1 << WebIDLParser.INTERFACE) | (1 << WebIDLParser.NAMESPACE) | (1 << WebIDLParser.PARTIAL))) != 0) or _la==WebIDLParser.TYPEDEF or _la==WebIDLParser.IDENTIFIER_WEBIDL:
                self.state = 174
                self.definitions()


            self.state = 177
            self.match(WebIDLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefinitionsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def definition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(WebIDLParser.DefinitionContext)
            else:
                return self.getTypedRuleContext(WebIDLParser.DefinitionContext,i)


        def getRuleIndex(self):
            return WebIDLParser.RULE_definitions

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefinitions" ):
                return visitor.visitDefinitions(self)
            else:
                return visitor.visitChildren(self)




    def definitions(self):

        localctx = WebIDLParser.DefinitionsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_definitions)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 180 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 179
                self.definition()
                self.state = 182 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << WebIDLParser.LEFT_BRACKET) | (1 << WebIDLParser.CALLBACK) | (1 << WebIDLParser.DICTIONARY) | (1 << WebIDLParser.ENUM) | (1 << WebIDLParser.INTERFACE) | (1 << WebIDLParser.NAMESPACE) | (1 << WebIDLParser.PARTIAL))) != 0) or _la==WebIDLParser.TYPEDEF or _la==WebIDLParser.IDENTIFIER_WEBIDL):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefinitionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def callbackOrInterfaceOrMixin(self):
            return self.getTypedRuleContext(WebIDLParser.CallbackOrInterfaceOrMixinContext,0)


        def extendedAttributeList(self):
            return self.getTypedRuleContext(WebIDLParser.ExtendedAttributeListContext,0)


        def namespace(self):
            return self.getTypedRuleContext(WebIDLParser.NamespaceContext,0)


        def partial(self):
            return self.getTypedRuleContext(WebIDLParser.PartialContext,0)


        def dictionary(self):
            return self.getTypedRuleContext(WebIDLParser.DictionaryContext,0)


        def enum_(self):
            return self.getTypedRuleContext(WebIDLParser.Enum_Context,0)


        def typedef(self):
            return self.getTypedRuleContext(WebIDLParser.TypedefContext,0)


        def includesStatement(self):
            return self.getTypedRuleContext(WebIDLParser.IncludesStatementContext,0)


        def getRuleIndex(self):
            return WebIDLParser.RULE_definition

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefinition" ):
                return visitor.visitDefinition(self)
            else:
                return visitor.visitChildren(self)




    def definition(self):

        localctx = WebIDLParser.DefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_definition)
        self._la = 0 # Token type
        try:
            self.state = 212
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 185
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==WebIDLParser.LEFT_BRACKET:
                    self.state = 184
                    self.extendedAttributeList()


                self.state = 187
                self.callbackOrInterfaceOrMixin()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 189
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==WebIDLParser.LEFT_BRACKET:
                    self.state = 188
                    self.extendedAttributeList()


                self.state = 191
                self.namespace()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 193
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==WebIDLParser.LEFT_BRACKET:
                    self.state = 192
                    self.extendedAttributeList()


                self.state = 195
                self.partial()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 197
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==WebIDLParser.LEFT_BRACKET:
                    self.state = 196
                    self.extendedAttributeList()


                self.state = 199
                self.dictionary()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 201
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==WebIDLParser.LEFT_BRACKET:
                    self.state = 200
                    self.extendedAttributeList()


                self.state = 203
                self.enum_()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 205
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==WebIDLParser.LEFT_BRACKET:
                    self.state = 204
                    self.extendedAttributeList()


                self.state = 207
                self.typedef()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 209
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==WebIDLParser.LEFT_BRACKET:
                    self.state = 208
                    self.extendedAttributeList()


                self.state = 211
                self.includesStatement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CallbackOrInterfaceOrMixinContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CALLBACK(self):
            return self.getToken(WebIDLParser.CALLBACK, 0)

        def callbackRestOrInterface(self):
            return self.getTypedRuleContext(WebIDLParser.CallbackRestOrInterfaceContext,0)


        def INTERFACE(self):
            return self.getToken(WebIDLParser.INTERFACE, 0)

        def interfaceOrMixin(self):
            return self.getTypedRuleContext(WebIDLParser.InterfaceOrMixinContext,0)


        def getRuleIndex(self):
            return WebIDLParser.RULE_callbackOrInterfaceOrMixin

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCallbackOrInterfaceOrMixin" ):
                return visitor.visitCallbackOrInterfaceOrMixin(self)
            else:
                return visitor.visitChildren(self)




    def callbackOrInterfaceOrMixin(self):

        localctx = WebIDLParser.CallbackOrInterfaceOrMixinContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_callbackOrInterfaceOrMixin)
        try:
            self.state = 218
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [WebIDLParser.CALLBACK]:
                self.enterOuterAlt(localctx, 1)
                self.state = 214
                self.match(WebIDLParser.CALLBACK)
                self.state = 215
                self.callbackRestOrInterface()
                pass
            elif token in [WebIDLParser.INTERFACE]:
                self.enterOuterAlt(localctx, 2)
                self.state = 216
                self.match(WebIDLParser.INTERFACE)
                self.state = 217
                self.interfaceOrMixin()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InterfaceOrMixinContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def interfaceRest(self):
            return self.getTypedRuleContext(WebIDLParser.InterfaceRestContext,0)


        def mixinRest(self):
            return self.getTypedRuleContext(WebIDLParser.MixinRestContext,0)


        def getRuleIndex(self):
            return WebIDLParser.RULE_interfaceOrMixin

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInterfaceOrMixin" ):
                return visitor.visitInterfaceOrMixin(self)
            else:
                return visitor.visitChildren(self)




    def interfaceOrMixin(self):
